# em_fast_api_app

./: .env.test  .gitignore  .pre-commit-config.yaml  hello.py  pyproject.toml  pytest.ini
app/: dependencies.py  main.py
app/api/v1/: dependencies.py
app/api/v1/routers/: dynamics.py  endpoints_trading_result.py  last_trading_dates.py  trading_results.py
app/core/: cache.py  config.py  utils.py
app/db/: session.py
app/models/: trading_result.py
app/repositories/: trading_result_repository.py
app/schemas/: pydantic_schemas.py
app/services/: trading_result_service.py
deploy/: docker-compose.yml
tests/: config.py  conftest.py  docker-compose.test.yml
tests/fixtures/: database.py
tests/integration/test_api/test_v1/test_routers/: test_endpoints_trading_result.py
tests/unit/test_core/: test_cache.py  test_config.py  test_utils.py
