[project]
name = "em-fast-api-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "black>=24.10.0",
    "fastapi[all]>=0.115.6",
    "greenlet>=3.1.1",
    "loguru>=0.7.3",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.36",
]

[tool.ruff]
line-length = 119

[tool.isort]
profile = "black"

[tool.black]
line-length = 119
