[project]
name = "em-fast-api-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "black>=24.10.0",
    "fastapi[all]>=0.115.6",
    "greenlet>=3.1.1",
    "loguru>=0.7.3",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "redis>=5.2.1",
    "sqlalchemy-utils>=0.41.2",
    "sqlalchemy>=2.0.36",
    "async-asgi-testclient>=1.4.11",
    "asgi-lifespan>=2.1.0",
    "pydantic>=2.10.4",
    "types-redis>=4.6.0.20241004",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.25.0",
    "pytest-dotenv>=0.5.2",
    "pytest-xdist>=3.6.1",
]

[tool.ruff]
line-length = 119

[tool.isort]
profile = "black"

[tool.black]
line-length = 119

[tool.bandit]
exclude_dirs = ["tests", "test"]
skips = ["B101", "B104", "B105", "B106", "B107", "B108", "B110", "B112"]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = [
    "app.core.cache",
    "pydantic.*",
    "app.schemas.pydantic_schemas",
    "redis.asyncio",
    "app.services.trading_result_service",
    "app.dependencies",
    "tests.conftest"
]
ignore_errors = true
